# fedshop-go

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  PLAN-watdiv-python.md  SKILLS.md  context-codex.md  estado-atual-benchmarks.txt  fala.txt  fedshop-py-config-refactor-plan.md  go-engine.d2  instrucoes-tabela-comparacao-engines.txt  instructions.md  plano-slides-3.txt  skills-lock.json
fedshop-py/: .gitignore  PIPELINE_GUIDE.md  engines  experiments  generators  pyproject.toml  run-benchmark.sh
fedshop-py/benchmark/: metrics-fedshop-go-smoke.csv  metrics-q01.csv  metrics.csv  metrics_attempt1.csv  metrics_full.csv  new_metrics.csv  typst-tables.typ
fedshop-py/benchmark/backup/: metrics.csv
fedshop-py/config/: config_small.yaml
fedshop-py/data/: virtuoso-proxy-mapping-batch0.json  virtuoso-proxy-mapping-batch1.json
fedshop-py/docker/: jena.yml  proxy.yml  virtuoso.yml
fedshop-py/docs/: handoff-2026-06-30.md
fedshop-py/queries/: q02.const.json  q03.const.json  q05.sparql  q06.const.json  q07.const.json  q07.sparql  q08.const.json  q10.const.json
fedshop-py/scripts/: patch_rsa_timing.py  patch_stats_join_time.py  render_typst_tables.py  run-all-evaluations.sh
fedshop-py/src/fedshop/: cli.py  config.py  evaluate.py  generate.py  hypothesis.py  ingest.py  metrics.py  plot.py  proxy.py  query.py  sparql.py  typst_tables.py  (+1 more)
fedshop-py/tests/: conftest.py  test_algebra.py  test_config.py  test_evaluate.py  test_generate.py  test_hypothesis.py  test_ingest.py  test_metrics.py  test_query_generation.py  test_sparql.py  test_typst_tables.py  test_watdiv.py
(+20690 files in other folders)
