[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedshop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rdflib>=7.0",
    "sparqlwrapper>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "python-dateutil>=2.9",
]

[project.scripts]
fedshop = "fedshop.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fedshop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
